--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ Given a version number MAJOR.MINOR, increment the:
 </p>
 
 <p>
-    If you'd like to leave feedback, please <a href="http://twitter/jaybazuzi">tweet at me</a>.
+    If you'd like to leave feedback, please <a href="http://twitter.com/jaybazuzi">tweet at me.</a>.
 </p>
 
 <h2>License</h2>
