Fix tyops (thanks @j10z5n)

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ Given a version number MAJOR.MINOR, increment the:
 
 <h2>Introduction</h2>
 
-<p>First, I want to thank <A HREF="http://semver.org">Semantic Versioning</A> for giving a tool to manage compatibility in software dependencies.</p>
+<p>First, I want to thank <A HREF="http://semver.org">Semantic Versioning</A> for giving the world a tool to manage compatibility in software dependencies.</p>
 
 <p>
     <i>SemVer</i> treats releases with new features separately from releases with bug fixes. For dependency management,
@@ -116,7 +116,7 @@ Given a version number MAJOR.MINOR, increment the:
     <LI>A normal version number MUST take the form X.Y. X is the major version and Y is the minor version.</LI>
     <LI>Minor version MUST be incremented for any release which maintains backwards compatibility to the public API.</LI>
     <LI>Major version MUST be incremented if any backwards incompatible changes are introduced to the public API.</LI>
-    <LI>When compatibilty with SimVer tooling is required, it is acceptable to add a '.0' patch version, e.g. 2.1.0, but normally that should be avoided.</LI>
+    <LI>When compatibilty with SemVer tooling is required, it is acceptable to add a '.0' patch version, e.g. 2.1.0, but normally that should be avoided.</LI>
 </OL>
 
 <h2>Context</h2>
@@ -145,7 +145,7 @@ Given a version number MAJOR.MINOR, increment the:
 
 <p>Maybe. Why is this a problem?</p>
 
-<h3>What about fixing security issues></h3>
+<h3>What about fixing security issues?</h3>
 
 <p>I'm tempted to say that security fixes can be minor releases, even if they break compatibility. Thoughts?</p>
 
